--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -279,16 +279,17 @@
   "settings.menu.stakePools.link.label": "ステークプール",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
-  "settings.stakePools.smash.description1": "ステークプールメタデータアグリゲーションサーバー（SMASH）は以下のためのオフチェーンメタデータサーバーです。",
-  "settings.stakePools.smash.description2": "オフチェーンメタデータサーバーを使用しない場合、Daedalusクライアントはすべてのステークプールと個別に接触してこのデータをフェッチすることになります。このプロセスは大量の時間とリソースを消費します。受信したステークプールのリストはキュレーションされていないため、Daedalusは合法的なプールも、重複やフェイクのプールもすべて取得します。このプロセスの追加的リスクとして、ウィルス対策ソフトウェアが何千ものネットワークリクエストを、Daedalusクライアントによる悪意のある行動と見なす可能性があります。",
-  "settings.stakePools.smash.descriptionItem1Content1": "すべてのサーバーは、個別のキュレーションポリシーを採用しています。例えば、IOHKサーバーは、登録されたステークプールが有効であることを確実にし、ティッカー名や商標の重複を回避し、プールが攻撃的または害となる可能性のある機能を有していないかチェックします。",
-  "settings.stakePools.smash.descriptionItem1Content2": "不運なことに、詐欺や荒らし、虐待行為もオンラインエコシステムの一部であることを受け、問題となる恐れのあるアクターを活動の場からふるい落とす方法を見つける必要がありました。",
-  "settings.stakePools.smash.descriptionItem1Title": "サーバーリストのキュレーション",
-  "settings.stakePools.smash.descriptionItem2Content": "各Daedalusクライアントが、すべてのステークプールから個別にデータをフェッチすることはありません。選択されたサーバーにある全ステークプールのオフチェーンデータをロードします。",
-  "settings.stakePools.smash.descriptionItem2Title": "ステークプールのロードの高速化を実現",
-  "settings.stakePools.smash.select.IOHKServer": "IOHK",
+  "settings.stakePools.smash.description": "{link}は、ステークプールの詳細を素早くロードすることを可能にする、オフチェーンのメタデータサーバーです。ステークプールは、サーバーごとに異なるポリシーに基づいてキュレーションされます。",
+  "settings.stakePools.smash.descriptionIOHKContent1": "IOHKサーバーは、登録されたステークプールが有効であることを確認し、ティッカー名や商標の重複を回避し、プールが攻撃的または害となる可能性のある情報を有していないかチェックします。",
+  "settings.stakePools.smash.descriptionIOHKContent2": "これで問題を起こす可能性のあるアクターをフィルタリングすることにより、詐欺や荒らし、虐待行為に対処することができます。IOHKのSMASHサーバーの詳細はこちらを",
+  "settings.stakePools.smash.descriptionIOHKLinkLabel": "ご覧ください。",
+  "settings.stakePools.smash.descriptionIOHKLinkUrl": "https://iohk.io/en/blog/posts/2020/11/17/in-pools-we-trust/",
+  "settings.stakePools.smash.descriptionLinkLabel": "ステークプールメタデータアグリゲーションサーバー（SMASH）",
+  "settings.stakePools.smash.descriptionLinkUrl": "https://iohk.io/en/blog/posts/2020/11/17/in-pools-we-trust/",
+  "settings.stakePools.smash.descriptionNone": "<b>このオプションは推奨されません。</b>オフチェーンメタデータサーバーを使用しない場合、Daedalusクライアントはすべてのステークプールと個別に接触してこのデータをフェッチすることになります。このプロセスは大量の時間とリソースを消費します。受信したステークプールのリストはキュレーションされていないため、Daedalusは合法的なプールも、重複やフェイクのプールもすべて取得します。このプロセスの追加的リスクとして、ウィルス対策ソフトウェアが何千ものネットワークリクエストを、Daedalusクライアントによる悪意のある行動と見なす可能性があります。",
+  "settings.stakePools.smash.select.IOHKServer": "IOHK<em>（推奨）</em>",
   "settings.stakePools.smash.select.customServer": "カスタムサーバー",
-  "settings.stakePools.smash.select.direct": "なし - Daedalusクライアントにデータをフェッチさせる",
+  "settings.stakePools.smash.select.direct": "使用しない（直接データをフェッチする）",
   "settings.stakePools.smash.select.label": "オフチェーンメタデータサーバー（SMASH）",
   "settings.stakePools.smashUrl.input.invalidUrl": "無効なURL",
   "settings.stakePools.smashUrl.input.label": "SMASHサーバーURL",
@@ -471,7 +472,7 @@
   "staking.rewards.tableHeader.reward": "報酬",
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
-  "staking.stakePools.curatedBy": "!!!Curated by",
+  "staking.stakePools.curatedBy": " ",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール ({pools})",
