--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -280,14 +280,14 @@
   "settings.menu.support.link.label": "Support",
   "settings.menu.termsOfUse.link.label": "Terms of service",
   "settings.stakePools.smash.description": "The {link} is an off-chain metadata server that enables the fast loading of stake pool details. Stake pools are also curated and each server has a different curation policy.",
-  "settings.stakePools.smash.descriptionLinkLabel": "Stakepool Metadata Aggregation Server (SMASH)",
-  "settings.stakePools.smash.descriptionLinkUrl": "https://docs.cardano.org/en/latest/getting-started/stake-pool-operators/SMASH-metadata-management.html",
   "settings.stakePools.smash.descriptionIOHKContent1": "The IOHK server ensures that registered stake pools are valid, helps to avoid duplicated ticker names or trademarks, and checks that the pools do not feature potentially offensive or harmful information.",
   "settings.stakePools.smash.descriptionIOHKContent2": "This allows us to deal with any scams, trolls, or abusive behavior by filtering out potentially problematic actors. {link} about the IOHK SMASH server.",
   "settings.stakePools.smash.descriptionIOHKLinkLabel": "Read more",
   "settings.stakePools.smash.descriptionIOHKLinkUrl": "https://iohk.io/en/blog/posts/2020/11/17/in-pools-we-trust/",
+  "settings.stakePools.smash.descriptionLinkLabel": "Stakepool Metadata Aggregation Server (SMASH)",
+  "settings.stakePools.smash.descriptionLinkUrl": "https://docs.cardano.org/en/latest/getting-started/stake-pool-operators/SMASH-metadata-management.html",
   "settings.stakePools.smash.descriptionNone": "<b>This option is not recommended!</b> Without the off-chain metadata server your Daedalus client will fetch this data by contacting every stake pool individually, which is a very slow and resource-consuming process. The list of stake pools received is not curated, so Daedalus will receive legitimate pools, duplicates, and fake pools. An added risk to this process is that your antivirus or antimalware software could recognize the thousands of network requests as malicious behavior by the Daedalus client.",
-  "settings.stakePools.smash.select.IOHKServer": "IOHK (<em>recommended</em>)",
+  "settings.stakePools.smash.select.IOHKServer": "IOHK <em>(recommended)</em>",
   "settings.stakePools.smash.select.customServer": "Custom server",
   "settings.stakePools.smash.select.direct": "None - fetch the data directly",
   "settings.stakePools.smash.select.label": "Off-chain metadata server (SMASH)",
