--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -965,6 +965,7 @@
   "wallet.transaction.state.pending": "Transaction pending",
   "wallet.transaction.state.pendingHeading": "Pending",
   "wallet.transaction.transactionAmount": "Transaction amount",
+  "wallet.transaction.transactionFee": "Transaction fee",
   "wallet.transaction.transactionId": "Transaction ID",
   "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transaction.transactionMetadataDescription": "Transaction metadata is not moderated and may contain inappropriate content. Show unmoderated content.",
