--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -965,6 +965,7 @@
   "wallet.transaction.state.pending": "トランザクション処理中",
   "wallet.transaction.state.pendingHeading": "保留中",
   "wallet.transaction.transactionAmount": "トランザクション額",
+  "wallet.transaction.transactionFee": "取引料金",
   "wallet.transaction.transactionId": "トランザクションID",
   "wallet.transaction.transactionMetadata": "トランザクション Metadata",
   "wallet.transaction.transactionMetadataDescription": "トランザクション Metadata、不適切なコンテンツが含まれている可能性があります。モデレートされていないコンテンツを表示します。",
