--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -479,6 +479,7 @@
   "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
   "staking.stakePools.loadingStakePoolsMessage": "ステークプールをロードしています",
   "staking.stakePools.noDataDashTooltip": "まだ利用できるデータがありません",
+  "staking.stakePools.notCurated": "!!!Curated by",
   "staking.stakePools.rankingAllWallets": "すべてのウォレット",
   "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
   "staking.stakePools.rankingAllWalletsStart": "ステークプールは現在",
