DDW-500 Implement design for native tokens - Wallet token transactions history updates on assets

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -956,6 +956,7 @@
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/en-us/articles/360038113814",
   "wallet.transaction.received": "{transactionsType} received",
   "wallet.transaction.receiverLabel": "Receiver",
+  "wallet.transaction.assetLabel": "Asset",
   "wallet.transaction.rewards.from": "From rewards",
   "wallet.transaction.sent": "{transactionsType} sent",
   "wallet.transaction.state.confirmed": "Transaction confirmed",
