DDW-500 Implement design for native tokens - Wallet token send confirmation dialog address label

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -806,10 +806,11 @@
   "wallet.select.import.dialog.walletExists": "Wallet already exists",
   "wallet.select.import.dialog.walletImported": "Wallet imported",
   "wallet.select.import.dialog.walletName": "Enter wallet name",
+  "wallet.send.confirmationDialog.addressFromLabel": "From address",
   "wallet.send.confirmationDialog.addressToLabel": "To",
   "wallet.send.confirmationDialog.amountLabel": "Amount",
   "wallet.send.confirmationDialog.back": "Back",
-  "wallet.send.confirmationDialog.feesLabel": "Fees",
+  "wallet.send.confirmationDialog.feesLabel": "Transaction fee",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "I understand that real ada will be moved as part of this transaction and that this action is irreversible.",
   "wallet.send.confirmationDialog.flightCandidateWarning": "<b>Warning:</b> flight candidate versions of Daedalus are connected to the Cardano mainnet. If you confirm this transaction, real ada will be transferred out of this wallet.",
   "wallet.send.confirmationDialog.passphraseFieldPlaceholder": "Type your spending password",
