--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -806,10 +806,11 @@
   "wallet.select.import.dialog.walletExists": "既存のウォレット",
   "wallet.select.import.dialog.walletImported": "ウォレットをインポート済み",
   "wallet.select.import.dialog.walletName": "ウォレット名を入力してください",
+  "wallet.send.confirmationDialog.addressFromLabel": "差出人住所",
   "wallet.send.confirmationDialog.addressToLabel": "送金先",
   "wallet.send.confirmationDialog.amountLabel": "金額",
   "wallet.send.confirmationDialog.back": "戻る",
-  "wallet.send.confirmationDialog.feesLabel": "手数料",
+  "wallet.send.confirmationDialog.feesLabel": "取引料金",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "このトランザクションの一環として実際のADAが送金されること、またこのアクションは取消しできないことを理解しました。",
   "wallet.send.confirmationDialog.flightCandidateWarning": "<b>警告：</b>Daedalus Flight候補版はCardanoメインネットに接続されています。このトランザクションを確認すると、実際のADAがこのウォレットから送金されます。",
   "wallet.send.confirmationDialog.passphraseFieldPlaceholder": "送金時パスワードを入力して下さい",
