DDW-500 Implement design for native tokens - Wallet token send confirmation dialog receiver fields

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -809,6 +809,7 @@
   "wallet.send.confirmationDialog.addressFromLabel": "差出人住所",
   "wallet.send.confirmationDialog.addressToLabel": "送金先",
   "wallet.send.confirmationDialog.amountLabel": "金額",
+  "wallet.send.confirmationDialog.assetLabel": "資産",
   "wallet.send.confirmationDialog.back": "戻る",
   "wallet.send.confirmationDialog.feesLabel": "取引料金",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "このトランザクションの一環として実際のADAが送金されること、またこのアクションは取消しできないことを理解しました。",
@@ -816,6 +817,7 @@
   "wallet.send.confirmationDialog.passphraseFieldPlaceholder": "送金時パスワードを入力して下さい",
   "wallet.send.confirmationDialog.passphraseLabel": "送金時パスワード",
   "wallet.send.confirmationDialog.passwordError": "送金時パスワードが間違っています",
+  "wallet.send.confirmationDialog.receiver.label": "送金先",
   "wallet.send.confirmationDialog.submit": "送金する",
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
