--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -809,6 +809,7 @@
   "wallet.send.confirmationDialog.addressFromLabel": "From address",
   "wallet.send.confirmationDialog.addressToLabel": "To",
   "wallet.send.confirmationDialog.amountLabel": "Amount",
+  "wallet.send.confirmationDialog.assetLabel": "Asset",
   "wallet.send.confirmationDialog.back": "Back",
   "wallet.send.confirmationDialog.feesLabel": "Transaction fee",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "I understand that real ada will be moved as part of this transaction and that this action is irreversible.",
@@ -816,6 +817,7 @@
   "wallet.send.confirmationDialog.passphraseFieldPlaceholder": "Type your spending password",
   "wallet.send.confirmationDialog.passphraseLabel": "Spending password",
   "wallet.send.confirmationDialog.passwordError": "Incorrect spending password",
+  "wallet.send.confirmationDialog.receiver.label": "Receiver",
   "wallet.send.confirmationDialog.submit": "Send",
   "wallet.send.confirmationDialog.title": "Confirm transaction",
   "wallet.send.confirmationDialog.totalLabel": "Total",
