--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -472,14 +472,16 @@
   "staking.rewards.tableHeader.reward": "Reward",
   "staking.rewards.tableHeader.wallet": "Wallet",
   "staking.rewards.title": "Earned delegation rewards",
-  "staking.stakePools.curatedBy": "Curated by",
+  "staking.stakePools.moderatedBy": "Moderated by {smashServer}",
   "staking.stakePools.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.learnMore": "Learn more",
-  "staking.stakePools.listTitle": "Stake pools ({pools})",
-  "staking.stakePools.listTitleWithSearch": "Stake pools. Search results: ({pools})",
+  "staking.stakePools.listTitle": "Stake pools",
+  "staking.stakePools.listTitleLoading": "Loading stake pools",
+  "staking.stakePools.listTitleSearch": ". Search results:",
+  "staking.stakePools.listTitleStakePools": " ({pools})",
   "staking.stakePools.loadingStakePoolsMessage": "Loading stake pools",
   "staking.stakePools.noDataDashTooltip": "Data not available yet",
-  "staking.stakePools.notCurated": "Not curated",
+  "staking.stakePools.unmoderated": "Unmoderated",
   "staking.stakePools.rankingAllWallets": "all your wallets",
   "staking.stakePools.rankingAllWalletsEnd": ".",
   "staking.stakePools.rankingAllWalletsStart": "Stake pools are currently ranked based on the combined amount in",
