--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -279,14 +279,14 @@
   "settings.menu.stakePools.link.label": "ステークプール",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
-  "settings.stakePools.smash.description": "{link}は、ステークプールの詳細を素早くロードすることを可能にする、オフチェーンのメタデータサーバーです。ステークプールは、サーバーごとに異なるポリシーに基づいてキュレーションされます。",
+  "settings.stakePools.smash.description": "{link}は、ステークプールの詳細を素早くロードすることを可能にする、オフチェーンのメタデータサーバーです。ステークプールは、サーバーごとに異なるポリシーに基づいて調整されます。",
   "settings.stakePools.smash.descriptionIOHKContent1": "IOHKサーバーは、登録されたステークプールが有効であることを確認し、ティッカー名や商標の重複を回避し、プールが攻撃的または害となる可能性のある情報を有していないかチェックします。",
   "settings.stakePools.smash.descriptionIOHKContent2": "これで問題を起こす可能性のあるアクターをフィルタリングすることにより、詐欺や荒らし、虐待行為に対処することができます。IOHKのSMASHサーバーの詳細はこちらを",
   "settings.stakePools.smash.descriptionIOHKLinkLabel": "ご覧ください。",
   "settings.stakePools.smash.descriptionIOHKLinkUrl": "https://iohk.io/en/blog/posts/2020/11/17/in-pools-we-trust/",
   "settings.stakePools.smash.descriptionLinkLabel": "ステークプールメタデータアグリゲーションサーバー（SMASH）",
-  "settings.stakePools.smash.descriptionLinkUrl": "https://iohk.io/en/blog/posts/2020/11/17/in-pools-we-trust/",
-  "settings.stakePools.smash.descriptionNone": "<b>このオプションは推奨されません。</b>オフチェーンメタデータサーバーを使用しない場合、Daedalusクライアントはすべてのステークプールと個別に接触してこのデータをフェッチすることになります。このプロセスは大量の時間とリソースを消費します。受信したステークプールのリストはキュレーションされていないため、Daedalusは合法的なプールも、重複やフェイクのプールもすべて取得します。このプロセスの追加的リスクとして、ウィルス対策ソフトウェアが何千ものネットワークリクエストを、Daedalusクライアントによる悪意のある行動と見なす可能性があります。",
+  "settings.stakePools.smash.descriptionLinkUrl": "https://docs.cardano.org/en/latest/getting-started/stake-pool-operators/SMASH-metadata-management.html",
+  "settings.stakePools.smash.descriptionNone": "<b>このオプションは推奨されません。</b>オフチェーンメタデータサーバーを使用しない場合、Daedalusクライアントはすべてのステークプールと個別に接触してこのデータをフェッチすることになります。このプロセスは大量の時間とリソースを消費します。受信したステークプールのリストは調整されていないため、Daedalusは合法的なプールも、重複やフェイクのプールもすべて取得します。このプロセスの追加的リスクとして、ウィルス対策ソフトウェアが何千ものネットワークリクエストを、Daedalusクライアントによる悪意のある行動と見なす可能性があります。",
   "settings.stakePools.smash.select.IOHKServer": "IOHK<em>（推奨）</em>",
   "settings.stakePools.smash.select.customServer": "カスタムサーバー",
   "settings.stakePools.smash.select.direct": "使用しない（直接データをフェッチする）",
@@ -472,14 +472,16 @@
   "staking.rewards.tableHeader.reward": "報酬",
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
-  "staking.stakePools.curatedBy": "{serverName}によりキュレーション済み",
+  "staking.stakePools.moderatedBy": "{smashServer}が調整済み",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.learnMore": "もっと知る",
-  "staking.stakePools.listTitle": "ステークプール ({pools})",
-  "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
+  "staking.stakePools.listTitle": "ステークプール",
+  "staking.stakePools.listTitleLoading": "ロード中のステークプール",
+  "staking.stakePools.listTitleSearch": "。検索結果：",
+  "staking.stakePools.listTitleStakePools": "（{pools}）",
   "staking.stakePools.loadingStakePoolsMessage": "ステークプールをロードしています",
   "staking.stakePools.noDataDashTooltip": "まだ利用できるデータがありません",
-  "staking.stakePools.notCurated": "!!!Curated by",
+  "staking.stakePools.unmoderated": "未調整",
   "staking.stakePools.rankingAllWallets": "すべてのウォレット",
   "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
   "staking.stakePools.rankingAllWalletsStart": "ステークプールは現在",
