DDW-500 Implement design for native tokens - Wallet token send form - new updates for receiver fields

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -822,6 +822,7 @@
   "wallet.send.confirmationDialog.title": "Confirm transaction",
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.form.amount.label": "Amount",
+  "wallet.send.form.button.addNewReceiver": "+ Add another receiver",
   "wallet.send.form.deposit.label": "Deposit",
   "wallet.send.form.description.hint": "You can type a message here, if you want.",
   "wallet.send.form.description.label": "Description",
@@ -833,7 +834,7 @@
   "wallet.send.form.of.label": "of",
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
-  "wallet.send.form.receiver.placeholder": "Paste address or select your other wallet",
+  "wallet.send.form.receiver.placeholder": "Paste an address",
   "wallet.send.form.reset": "Reset",
   "wallet.send.form.send": "Send",
   "wallet.send.form.syncingTransactionsMessage": "The balance and transaction history of this wallet is being synced with the blockchain.",
