--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -822,6 +822,7 @@
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
   "wallet.send.form.amount.label": "金額",
+  "wallet.send.form.button.addNewReceiver": "+別のレシーバーを追加する",
   "wallet.send.form.deposit.label": "預り金",
   "wallet.send.form.description.hint": "任意のメッセージを入力できます",
   "wallet.send.form.description.label": "詳細",
@@ -833,7 +834,7 @@
   "wallet.send.form.of.label": "/",
   "wallet.send.form.receiver.hint": "ウォレットアドレス",
   "wallet.send.form.receiver.label": "送金先",
-  "wallet.send.form.receiver.placeholder": "アドレスを貼り付けるか、他のウォレットを選択してください",
+  "wallet.send.form.receiver.placeholder": "アドレスを貼り付け",
   "wallet.send.form.reset": "リセット",
   "wallet.send.form.send": "送信",
   "wallet.send.form.syncingTransactionsMessage": "ウォレットの残高とトランザクション履歴は現在ブロックチェーンと同期中です。",
